#23 - 소지품 조회 기능
- WeatherStation 엔티티에서 제거
- WeatherStation들을 관리하는 WeatherStationManager 컴포넌트 추가

--- a/back/src/main/resources/templates/schedules/schedule-items.html
+++ b/back/src/main/resources/templates/schedules/schedule-items.html
@@ -15,15 +15,9 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="entry : ${itemSchedule}">
-                <td th:text="${entry.key}"></td>
-                <td>
-                    <table class="table">
-                        <tr th:each="list : ${entry.value}">
-                            <td th:text="${list}"></td>
-                        </tr>
-                    </table>
-                </td>
+            <tr th:each="item: ${itemSchedule}">
+                <td th:text="${item.getTime()}"></td>
+                <td th:text="${item.getItems()}"></td>
             </tr>
             </tbody>
         </table>
